[package]
name = "ghash-wasm"
description = "Ghash example App"
version = "0.0.1"
authors = ["glatan <glatan.edu@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
license = "GPL-3.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.18.0"
wasm-bindgen = "0.2.76"
ghash = { git = "https://gitlab.com/glatan/ghash", branch = "master", features = ["minimal"] }

[profile.release]
codegen-units = 1
lto = true

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['-O4']
