[package]
name = "ghash-wasm"
description = "Ghash example App"
version = "0.0.1"
authors = ["glatan <glatan.edu@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
license = "AGPL-3.0"
edition = "2021"

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
wasm-bindgen = "0.2.84"
web-sys = "0.3.61"
ghash = { git = "https://gitlab.com/glatan/ghash", branch = "master", features = ["minimal"] }

[profile.release]
codegen-units = 1
lto = true

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['-O4']
